FEAT: make cv page, result page, coverletterpage

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Rubic landing page.">
-    <meta name="author" content="Devcrud">
+    <meta name="description" content="write your assgin ment with writenow.">
+    <meta name="author" content="zinhyeok">
     <title>Rubic Landing page | Free Bootstrap 4.1 landing page</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Rubic main styles -->
-	<link rel="stylesheet" href="assets/css/rubic.css">
+	<link rel="stylesheet" href="assets/css/writenow.css">
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
 
     <nav id="scrollspy" class="navbar page-navbar navbar-dark navbar-expand-md fixed-top" data-spy="affix" data-offset-top="20">
         <div class="container">
-            <a class="navbar-brand" href="#"><strong class="text-primary">RU</strong><span class="text-light">BIC</span></a>
+            <a class="navbar-brand" href="#"><strong class="text-primary">WRITE</strong><span class="text-light">NOW</span></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -49,28 +49,28 @@
             <div class="row h-100 align-items-center">
                 <div class="col-md-7">
                     <div class="header-content">
-                        <h3 class="header-title"><strong class="text-primary">RU</strong><span>BIC</span></h3>
-                        <h4 class="header-subtitle">Creative Mylti-purpose Bootstrap theme </h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi dolores voluptatem voluptatum adipisci vel, beatae unde! Mollitia voluptatum, ullam quisquam optio!</p>
-                        <button class="btn btn-outline-light btn-flat">Download</button>
+                        <h3 class="header-title"><strong class="text-primary">WRITE</strong><span>NOW</span></h3>
+                        <h4 class="header-subtitle">지금 바로 당신의 이력서를 업로드하고 자기소개서를 받아보세요 </h4>
+                        <p>간단히 내 이력서를 업로드하고 원하는 자소서 문항을 작성하면 바로 끝, 1분안에 받아보는 자소서, Write now</p>
+                        <button class="btn btn-outline-light btn-flat">START NOW</button>
                     </div>  
                 </div>
                 <div class="col-md-5 d-none d-md-block">
                     <form class="header-form">
-                        <div class="head">Try your <span class="text-primary">Free</span> trial today.</div>
+                        <div class="head">지금 로그인하고 <span class="text-primary">바로 시작</span>해보기</div>
                         <div class="body">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Name*">
+                                <input type="text" class="form-control" placeholder="이름*">
                             </div>
                             <div class="form-group">
-                                <input type="email" class="form-control" placeholder="Email*">
+                                <input type="email" class="form-control" placeholder="이메일*">
                             </div>
                             <div class="form-group">
-                                <input type="password" class="form-control" placeholder="Password*">
+                                <input type="password" class="form-control" placeholder="비밀번호*">
                             </div>
                         </div>
                         <div class="footer">
-                            <button class="btn btn-primary btn-block">Get Started</button>
+                            <button class="btn btn-primary btn-block">Login or Sign up</button>
                         </div>
                     </form> 
                 </div>
@@ -322,32 +322,6 @@
             <button class="btn btn-outline-light btn-flat">Download</button>
         </div>
     </section>
-    <section class="section" id="contact">
-        <div class="container text-center">
-            <h6 class="display-4 has-line">CONTACT US</h6>
-            <p class="mb-5 pb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-            <form>
-                <div class="row mb-4">
-                    <div class="col-md-6">
-                        <div class="form-group pb-1">
-                            <input type="text" class="form-control" required placeholder="Name">            
-                        </div>
-                        <div class="form-group pb-1">
-                            <input type="email" class="form-control" required placeholder="Email">          
-                        </div>
-                        <div class="form-group ">
-                            <input type="text" class="form-control" placeholder="Subject">
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <textarea name="" id="" cols="" rows="7" class="form-control" required placeholder="Message"></textarea>
-                    </div>
-                </div>
-                <input type="submit" class="btn btn-primary btn-block" value="Send Message">
-            </form>
-        </div>
-    </section>
     <footer class="footer py-4 bg-dark text-light"> 
         <div class="container text-center">
             <p class="mb-4 small">Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="http://www.devcrud.com">DevCRUD</a></p>
@@ -368,8 +342,8 @@
     <!-- bootstrap 3 affix -->
 	<script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
 
-    <!-- Rubic js -->
-    <script src="assets/js/rubic.js"></script>
+    <!-- writenow js -->
+    <script src="assets/js/writenow.js"></script>
 
 </body>
 </html>
