FEAT:[change text allgin center to left of cv page]

--- a/mycv.html
+++ b/mycv.html
@@ -51,7 +51,8 @@
 
             <form>
                 <div class="row mb-4">
-                    <div class="col-md-6">
+                    <div class="col-12">
+                        <p class="mb-5 pb-2"><h3 style="text-align: left">개인 정보</h3></p>
                         <div class="form-group pb-1">
                             <input type="text" class="form-control" required placeholder="이름">            
                         </div>
@@ -61,27 +62,25 @@
                         <div class="form-group pb-1">
                             <input type="text" class="form-control" required placeholder="전공">            
                         </div>
-                        <p class="mb-5 pb-2"><h3>주요 이력</h3></p>
+                        <p class="mb-5 pb-2"><h3 style="text-align: left">주요 이력</h3></p>
                         <div class="form-group pb-1">
-                            <input type="text" class="form-control" required placeholder="이력명">
-                            <input type="text" class="form-control" required placeholder="활동날짜">
-                            <input type="text" class="form-control" required placeholder="이력내용">
+                            <textarea name="" id="" cols="" rows="7" class="form-control" required placeholder="Message"></textarea>
                         </div>
-                        <p class="mb-5 pb-2"><h3>기타 이력</h3></p>
+                        <p class="mb-5 pb-2"><h3 style="text-align: left">기타 이력</h3></p>
                         <div class="form-group pb-1">
-                            <input type="text" class="form-control" required placeholder="이력명">
-                            <input type="text" class="form-control" required placeholder="활동날짜">
-                            <input type="text" class="form-control" required placeholder="이력내용">
+                            <textarea name="" id="" cols="" rows="7" class="form-control" required placeholder="Message"></textarea>
                         </div>
-                        <p class="mb-5 pb-2"><h3>추가 내용</h3></p>
+                        <p class="mb-5 pb-2"><h3 style="text-align: left">추가 내용</h3></p>
                         <div class="form-group pb-1">
                             <textarea name="" id="" cols="" rows="7" class="form-control" required placeholder="Message"></textarea>
                         </div>
                     </div>
-                    <input type="submit" class="btn btn-primary btn-block" value="저장하기"> 
+                    </div>
+                    <input type="submit" class="btn btn-primary btn-block" value="저장하기">
+                    <input type="submit" class="btn btn-primary btn-block" value="자소서 작성의뢰하기">  
                 </div>
             </form>
-            <input type="submit" class="btn btn-primary btn-block" value="자소서 작성의뢰하기"> 
+            
         </div>
     </section>
     
