FEAT:[change title of page]

--- a/coverletterResult.html
+++ b/coverletterResult.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="write your assgin ment with writenow.">
     <meta name="author" content="zinhyeok">
-    <title>write now Landing page | Free Bootstrap 4.1 landing page</title>
+    <title>WRITENOW | gpt기반 자소서 및 이력 관리 서비스</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Rubic main styles -->
@@ -48,7 +48,7 @@
         <div class="container text-center">
             <h6 class="display-4 has-line">자소서 요청 결과</h6>
             <p class="mb-5 pb-2", style="text-decoration: underline;">작성해주신 이력을 바탕으로 작성된 자기소개서입니다</p>
-            <div style="background-color: #E2E2E2; border: 1px solid #000;"><p> 결과 
+            <div style="background-color: #FFFFFF; border: 1px solid #000;"><p> 결과 
                 
             </p></div>
             
