--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="write your assgin ment with writenow.">
     <meta name="author" content="zinhyeok">
-    <title>Rubic Landing page | Free Bootstrap 4.1 landing page</title>
+    <title>WRITENOW | gpt기반 자소서 및 이력 관리 서비스</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Rubic main styles -->
