--- a/components.html
+++ b/components.html
@@ -5,7 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    <meta name="description" content="Start your development with Rubic landing page.">
    <meta name="author" content="Devcrud">
-   <title>Rubic Landing page | Components</title>
+   <title>WRITENOW | gpt기반 자소서 및 이력 관리 서비스</title>
    <!-- font icons -->
    <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
    <!-- Bootstrap + Steller  -->
